Fixed overflow

--- a/client/src/components/ContentItemsSlider/ContentItemsSlider.css
+++ b/client/src/components/ContentItemsSlider/ContentItemsSlider.css
@@ -4,6 +4,7 @@
 	justify-content: center;
 	gap: 50px;
 	padding: 30px;
+	overflow: hidden;
 }
 
 .carousel-not-widget {
