--- a/client/src/pages/Content/Content.css
+++ b/client/src/pages/Content/Content.css
@@ -5,6 +5,7 @@
 	padding: 30px;
 	width: 100%;
 	transition: all .1s ease-in-out;
+	overflow-x: auto;
 }
 
 .content-poster-container {
