--- a/client/src/pages/Folders/Folder/Folder.css
+++ b/client/src/pages/Folders/Folder/Folder.css
@@ -57,6 +57,7 @@
 	gap: 10px;
 	margin: 0px 0 0 16vw;
 	padding: 30px;
+	overflow: hidden;
 }
 
 .folders-content-header {
