--- a/client/src/pages/Folders/FoldersMain.css
+++ b/client/src/pages/Folders/FoldersMain.css
@@ -14,6 +14,7 @@
 	max-width: 60vw;
 	justify-content: center;
 	margin: auto;
+	overflow: hidden;
 }
 
 
